Support connection router type on Views